--- a/index.html
+++ b/index.html
@@ -6,10 +6,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GameFi.org-staking</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <!-- Logo icon -->
+    <link rel="icon" href="./img/logo.svg">
+    <!-- Style local link -->
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
+    <!-- wrapper start -->
+    <div class="wrapper">
+        <!-- header start -->
+        <header id="header">
+            <div class="main">
+                <div class="main-container">
+                    <div class="header-wrap d-flex align-center justify-between">
+                        <div class="header-logo d-none">
+                            <img src="./img/logo.svg" alt="">
+                        </div>
+                        <!-- search -->
+                        <div class="search pr d-flex align-center">
+                            <span class="lopa pa">
+                                <svg width="17" height="17" viewBox="0 0 17 17" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <mask id="mask0_2_317" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="0"
+                                        y="0" width="17" height="17">
+                                        <path d="M16.343 0.569458H0.343018V16.5695H16.343V0.569458Z" fill="white" />
+                                    </mask>
+                                    <g mask="url(#mask0_2_317)">
+                                        <path d="M15.843 16.0695L12.843 13.0695" stroke="#EBEDF0" stroke-miterlimit="10"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                        <path
+                                            d="M6.84302 13.0695C10.1567 13.0695 12.843 10.3832 12.843 7.06946C12.843 3.75575 10.1567 1.06946 6.84302 1.06946C3.52931 1.06946 0.843018 3.75575 0.843018 7.06946C0.843018 10.3832 3.52931 13.0695 6.84302 13.0695Z"
+                                            stroke="#EBEDF0" stroke-miterlimit="10" stroke-linecap="round"
+                                            stroke-linejoin="round" />
+                                    </g>
+                                </svg>
 
+                            </span>
+                            <input type="search" placeholder="Search by keywords">
+                        </div>
+                        <!-- modal blog -->
+                        <button class="wallet-btn fsn">Connect Wallet</button>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- header end -->
+    </div>
+    <!-- wrapper enc -->
+    <!-- App js local link -->
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
