Home header tugadi

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
+    <!-- Poppins font online link-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <!-- Logo icon -->
     <link rel="icon" href="./img/logo.svg">
     <!-- Style local link -->
@@ -57,6 +63,46 @@
             </div>
         </header>
         <!-- header end -->
+
+        <!-- Home series start -->
+        <section id="home">
+            <div class="main">
+                <div class="container">
+                    <div class="home-wrap">
+                        <div class="home-header d-flex align-center">
+                            <div class="rank-series d-flex align-center">
+                                <div class="rank-img">
+                                    <img src="./img/rank.png" alt="">
+                                </div>
+                                <div class="rank-about">
+                                    <h3 class="fsn">Current Rank</h3>
+                                    <h3 class="fsn">Connect Wallet</h3>
+                                </div>
+                            </div>
+                            <div class="rank-series d-flex align-center">
+                                <div class="rank-about">
+                                    <h3 class="fsn">Your Stake</h3>
+                                    <h3 class="fsn">Connect Wallet</h3>
+                                </div>
+                            </div>
+                            <div class="rank-series d-flex align-center">
+                                <div class="rank-about">
+                                    <h3 class="fsn">$GAFI Left To Next Rank</h3>
+                                    <h3 class="fsn">Connect Wallet</h3>
+                                </div>
+                            </div>
+                            <div class="rank-series d-flex align-center">
+                                <div class="rank-about">
+                                    <h3 class="fsn">Total $GAFI Staked</h3>
+                                    <h3 style="color: #fff;" class="fsn rank-price">517,573.598</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Home series end -->
     </div>
     <!-- wrapper enc -->
     <!-- App js local link -->
