--- a/index.html
+++ b/index.html
@@ -98,6 +98,89 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="ranks d-flex justify-between">
+                            <ul class="rank-first-about">
+                                <li>$GAFI Required</li>
+                                <li>Winner Selection</li>
+                                <li>Max Individual Allocation</li>
+                                <li>Withdrawal Delay</li>
+                            </ul>
+                            <div class="rank-card d-flex align-center justify-center">
+                                <div class="rank-card-img">
+                                    <img src="./img/rank-card.png" alt="">
+                                </div>
+                                <div class="rank-card-about d-flex align-center justify-center">
+                                    <h4>Start</h4>
+                                    <ul>
+                                        <li>Min 0 $GAFI</li>
+                                        <li>—</li>
+                                        <li>—</li>
+                                        <li>—</li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                            <div class="rank-card d-flex align-center justify-center">
+                                <div class="rank-card-img">
+                                    <img style="transform: rotate(-90deg);" src="./img/rank-card-2.png" alt="">
+                                </div>
+                                <div class="rank-card-about d-flex align-center justify-center">
+                                    <h4>Rookie</h4>
+                                    <ul>
+                                        <li>Min 20 $GAFI</li>
+                                        <li>Lottery</li>
+                                        <li>$60</li>
+                                        <li>5 days</li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                            <div class="rank-card d-flex align-center justify-center">
+                                <div class="rank-card-img">
+                                    <img src="./img/rank-card-2.png" alt="">
+                                </div>
+                                <div class="rank-card-about d-flex align-center justify-center">
+                                    <h4>Elite</h4>
+                                    <ul>
+                                        <li>Min 100 $GAFI</li>
+                                        <li>Lottery</li>
+                                        <li>$300</li>
+                                        <li>8 days</li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                            <div class="rank-card d-flex align-center justify-center">
+                                <div class="rank-card-img">
+                                    <img src="./img/rank-card-2.png" alt="">
+                                </div>
+                                <div class="rank-card-about d-flex align-center justify-center">
+                                    <h4>Pro</h4>
+                                    <ul>
+                                        <li>Min 500 $GAFI</li>
+                                        <li>Lottery</li>
+                                        <li>$700</li>
+                                        <li>12 days</li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                            <div class="rank-card d-flex align-center justify-center">
+                                <div class="rank-card-img">
+                                    <img src="./img/rank-card-2.png" alt="">
+                                </div>
+                                <div class="rank-card-about d-flex align-center justify-center">
+                                    <h4>Elite</h4>
+                                    <ul>
+                                        <li>Auction NFT required</li>
+                                        <li>Guaranteed 20% Pool</li>
+                                        <li>—</li>
+                                        <li>30 days</li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
