number tabs ended

--- a/index.html
+++ b/index.html
@@ -181,6 +181,61 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="stake-tabs">
+                            <ul class="d-flex align-center">
+                                <li class="fsn tab-active">Stake <span></span></li>
+                                <li class="fsn">Unstake <span></span></li>
+                                <li class="fsn">Legendary Ranking <span></span></li>
+                            </ul>
+                        </div>
+                        <ul class="tab-numbers d-flex align-center">
+                            <li class="tab-series d-flex">
+                                <span class="number-line d-flex align-center">
+                                    <span class="line"></span>
+                                    <span class="number d-flex align-center justify-center">
+                                        <span>1</span>
+                                    </span>
+                                </span>
+                                <span class="num-text"> Pre-Stake</span>
+                            </li>
+                            <li class="tab-series d-flex">
+                                <span class="number-line d-flex align-center">
+                                    <span class="line"></span>
+                                    <span class="number d-flex align-center justify-center">
+                                        <span>2</span>
+                                    </span>
+                                </span>
+                                <span class="num-text"> Enter Amount</span>
+                            </li>
+                            <li class="tab-series d-flex ">
+                                <span class="number-line d-flex align-center">
+                                    <span class="line"></span>
+                                    <span class="number d-flex align-center justify-center">
+                                        <span>3</span>
+                                    </span>
+                                </span>
+                                <span class="num-text"> Approve</span>
+                            </li>
+                            <li class="tab-series d-flex ">
+                                <span class="number-line d-flex align-center">
+                                    <span class="line"></span>
+                                    <span class="number d-flex align-center justify-center">
+                                        <span>4</span>
+                                    </span>
+                                </span>
+                                <span class="num-text"> Confirmation</span>
+                            </li>
+                            <li class="tab-series d-flex ">
+                                <span class="number-line d-flex align-center">
+                                    <span class="line"></span>
+                                    <span class="number d-flex align-center justify-center">
+                                        <span>5</span>
+                                    </span>
+                                    <div class="line-2"></div>
+                                </span>
+                                <span class="num-text"> Completed</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
