--- a/index.html
+++ b/index.html
@@ -35,6 +35,108 @@
 </head>
 
 <body>
+    <!-- Sidebar series start -->
+    <section id="sidebar" class="d-flex align-center justify-center">
+        <a class="sidebar-logo" href="#">
+            <img src="./img/logo.svg" alt="">
+        </a>
+        <!-- Sidebar-link -->
+        <ul class="sidebar-link">
+            <li class="d-flex align-center justify-center">
+                <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M23.923 0.993446C23.824 0.893706 23.705 0.815971 23.5739 0.765313C23.4427 0.714654 23.3024 0.69221 23.162 0.699446C9.13302 1.43145 3.95202 13.9274 3.90202 14.0534C3.82884 14.2352 3.81068 14.4345 3.8498 14.6265C3.88891 14.8185 3.98357 14.9948 4.12202 15.1334L9.77902 20.7904C9.91833 20.9296 10.0956 21.0244 10.2886 21.0632C10.4816 21.102 10.6818 21.0829 10.864 21.0084C10.989 20.9574 23.418 15.7174 24.212 1.75545C24.2199 1.61519 24.1982 1.47484 24.1482 1.34355C24.0982 1.21226 24.0222 1.09296 23.923 0.993446ZM15.757 11.9834C15.5713 12.1692 15.3509 12.3166 15.1082 12.4171C14.8656 12.5177 14.6055 12.5695 14.3429 12.5695C14.0802 12.5695 13.8201 12.5179 13.5775 12.4174C13.3348 12.3169 13.1143 12.1696 12.9285 11.9839C12.7428 11.7983 12.5954 11.5778 12.4948 11.3352C12.3943 11.0925 12.3425 10.8324 12.3425 10.5698C12.3424 10.3071 12.3941 10.0471 12.4946 9.80439C12.595 9.56171 12.7423 9.3412 12.928 9.15545C13.303 8.7803 13.8117 8.56949 14.3422 8.56939C14.8726 8.5693 15.3814 8.77993 15.7565 9.15495C16.1317 9.52996 16.3425 10.0386 16.3426 10.5691C16.3427 11.0995 16.132 11.6083 15.757 11.9834ZM1.45602 19.4134C1.72011 19.1494 2.03362 18.9399 2.37867 18.7969C2.72372 18.654 3.09354 18.5805 3.46702 18.5805C3.84049 18.5805 4.21032 18.654 4.55536 18.7969C4.90041 18.9399 5.21393 19.1494 5.47802 19.4134C5.74211 19.6775 5.95159 19.9911 6.09452 20.3361C6.23744 20.6812 6.311 21.051 6.311 21.4244C6.311 21.7979 6.23744 22.1677 6.09452 22.5128C5.95159 22.8578 5.74211 23.1714 5.47802 23.4354C4.36702 24.5464 0.343018 24.5694 0.343018 24.5694C0.343018 24.5694 0.343018 20.5234 1.45602 19.4134ZM10.7 2.91045C9.29056 2.66505 7.84274 2.76266 6.47898 3.19502C5.11522 3.62739 3.87562 4.38179 2.86502 5.39445C2.33102 5.93445 1.86502 6.53845 1.48102 7.19445C1.3685 7.38549 1.32267 7.60852 1.35073 7.82845C1.37879 8.04839 1.47914 8.25276 1.63602 8.40945L3.62602 10.3994C5.47394 7.46636 7.87692 4.9224 10.7 2.91045ZM22.002 14.2124C22.2474 15.6219 22.1498 17.0697 21.7174 18.4335C21.2851 19.7972 20.5307 21.0368 19.518 22.0474C18.978 22.5824 18.373 23.0474 17.718 23.4314C17.527 23.544 17.3039 23.5898 17.084 23.5617C16.8641 23.5337 16.6597 23.4333 16.503 23.2764L14.513 21.2874C17.4462 19.4393 19.9902 17.0359 22.002 14.2124Z"
+                        fill="#777786" />
+                </svg>
+
+                <span>Launchpad</span>
+            </li>
+            <li class="d-flex align-center justify-center">
+                <svg width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M10.6161 0.855476C10.5558 0.774717 10.4799 0.706929 10.3928 0.65616C10.3058 0.605392 10.2094 0.572685 10.1094 0.559991C10.0095 0.547297 9.90798 0.554877 9.81101 0.582279C9.71404 0.609681 9.62359 0.656342 9.54505 0.719476C7.62838 2.25829 6.36423 4.46475 6.00605 6.89648C5.34907 6.41957 4.77334 5.83979 4.30105 5.17948C4.23688 5.08978 4.15372 5.01534 4.05749 4.96145C3.96126 4.90757 3.85433 4.87558 3.74432 4.86775C3.63431 4.85991 3.52393 4.87644 3.42104 4.91615C3.31815 4.95586 3.22528 5.01777 3.14905 5.09748C1.82821 6.4789 0.981448 8.24494 0.731411 10.1398C0.481374 12.0346 0.84105 13.9599 1.75834 15.6366C2.67563 17.3134 4.10289 18.6546 5.83339 19.466C7.56389 20.2773 9.50775 20.5167 11.3834 20.1495C13.2591 19.7822 14.9691 18.8274 16.2658 17.4233C17.5625 16.0192 18.3786 14.2388 18.5958 12.3399C18.813 10.441 18.42 8.52229 17.4738 6.86167C16.5276 5.20105 15.0773 3.88476 13.3331 3.10348C12.2607 2.58205 11.329 1.81118 10.6161 0.855476ZM13.4031 12.8195C13.4027 13.3619 13.2846 13.8978 13.0571 14.3902C12.8295 14.8826 12.4978 15.3197 12.0849 15.6715C11.672 16.0232 11.1877 16.2812 10.6654 16.4277C10.1431 16.5741 9.59524 16.6055 9.05964 16.5196C8.52404 16.4338 8.01344 16.2328 7.56307 15.9305C7.11269 15.6282 6.73326 15.2317 6.45095 14.7686C6.16864 14.3054 5.99018 13.7865 5.92787 13.2476C5.86557 12.7088 5.9209 12.1629 6.09005 11.6475C6.71805 12.1125 7.44005 12.4575 8.22305 12.6475C8.43556 11.2788 9.11582 10.026 10.1481 9.10248C11.0489 9.22244 11.8755 9.66545 12.4742 10.3491C13.0729 11.0328 13.403 11.9107 13.4031 12.8195Z"
+                        fill="#777786" />
+                </svg>
+
+                <span>Party</span>
+            </li>
+            <li class="d-flex align-center justify-center">
+                <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M8.60803 15.5695H3.60803C3.44227 15.5695 3.2833 15.6353 3.16609 15.7525C3.04888 15.8697 2.98303 16.0287 2.98303 16.1945V25.5695H9.23303V16.1945C9.23303 16.0287 9.16718 15.8697 9.04997 15.7525C8.93276 15.6353 8.77379 15.5695 8.60803 15.5695Z"
+                        fill="#777786" />
+                    <path
+                        d="M17.983 5.56946H12.983C12.8173 5.56946 12.6583 5.63531 12.5411 5.75252C12.4239 5.86973 12.358 6.0287 12.358 6.19446V25.5695H18.608V6.19446C18.608 6.0287 18.5422 5.86973 18.425 5.75252C18.3078 5.63531 18.1488 5.56946 17.983 5.56946Z"
+                        fill="#777786" />
+                    <path
+                        d="M27.358 10.5695H22.358C22.1923 10.5695 22.0333 10.6353 21.9161 10.7525C21.7989 10.8697 21.733 11.0287 21.733 11.1945V25.5695H27.983V11.1945C27.983 11.0287 27.9172 10.8697 27.8 10.7525C27.6828 10.6353 27.5238 10.5695 27.358 10.5695Z"
+                        fill="#777786" />
+                </svg>
+
+                <span>Ranking</span>
+            </li>
+            <li class="d-flex align-center justify-center">
+                <svg width="25" height="22" viewBox="0 0 25 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M17.4031 7.56946H7.40308C3.54308 7.56946 0.403076 10.7095 0.403076 14.5695C0.403076 18.4295 3.54308 21.5695 7.40308 21.5695H17.4031C21.2631 21.5695 24.4031 18.4295 24.4031 14.5695C24.4031 10.7095 21.2631 7.56946 17.4031 7.56946ZM10.4031 15.5695H8.40308V17.5695H6.40308V15.5695H4.40308V13.5695H6.40308V11.5695H8.40308V13.5695H10.4031V15.5695ZM15.4031 16.5695C15.1379 16.5695 14.8835 16.4641 14.696 16.2766C14.5084 16.089 14.4031 15.8347 14.4031 15.5695C14.4031 15.3042 14.5084 15.0499 14.696 14.8624C14.8835 14.6748 15.1379 14.5695 15.4031 14.5695C15.6683 14.5695 15.9226 14.6748 16.1102 14.8624C16.2977 15.0499 16.4031 15.3042 16.4031 15.5695C16.4031 15.8347 16.2977 16.089 16.1102 16.2766C15.9226 16.4641 15.6683 16.5695 15.4031 16.5695ZM18.4031 14.5695C18.1379 14.5695 17.8835 14.4641 17.696 14.2766C17.5084 14.089 17.4031 13.8347 17.4031 13.5695C17.4031 13.3042 17.5084 13.0499 17.696 12.8624C17.8835 12.6748 18.1379 12.5695 18.4031 12.5695C18.6683 12.5695 18.9226 12.6748 19.1102 12.8624C19.2977 13.0499 19.4031 13.3042 19.4031 13.5695C19.4031 13.8347 19.2977 14.089 19.1102 14.2766C18.9226 14.4641 18.6683 14.5695 18.4031 14.5695ZM13.4031 1.56946C13.4031 1.30424 13.2977 1.04989 13.1102 0.862351C12.9226 0.674815 12.6683 0.569458 12.4031 0.569458C12.1379 0.569458 11.8835 0.674815 11.696 0.862351C11.5084 1.04989 11.4031 1.30424 11.4031 1.56946V5.56946H13.4031V1.56946Z"
+                        fill="#777786" />
+                </svg>
+
+                <span>Games</span>
+            </li>
+            <li class="d-flex align-center sidebar-item-active justify-center">
+                <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M1.323 4.56946V8.56946C1.323 10.2265 4.009 11.5695 7.323 11.5695C10.637 11.5695 13.323 10.2265 13.323 8.56946V4.56946"
+                        stroke="#777786" stroke-width="2" stroke-miterlimit="10" />
+                    <path
+                        d="M1.323 8.56946V12.5695C1.323 14.2265 4.009 15.5695 7.323 15.5695C8.86 15.5695 10.261 15.2795 11.323 14.8045"
+                        stroke="#777786" stroke-width="2" stroke-miterlimit="10" />
+                    <path
+                        d="M1.323 12.5695V16.5695C1.323 18.2265 4.009 19.5695 7.323 19.5695C8.86 19.5695 10.262 19.2805 11.323 18.8055"
+                        stroke="#777786" stroke-width="2" stroke-miterlimit="10" />
+                    <path
+                        d="M7.323 7.56946C10.637 7.56946 13.323 6.22646 13.323 4.56946C13.323 2.91246 10.637 1.56946 7.323 1.56946C4.009 1.56946 1.323 2.91246 1.323 4.56946C1.323 6.22646 4.009 7.56946 7.323 7.56946Z"
+                        stroke="#777786" stroke-width="2" stroke-miterlimit="10" stroke-linecap="square" />
+                    <path
+                        d="M11.323 12.5695V16.5695C11.323 18.2265 14.009 19.5695 17.323 19.5695C20.637 19.5695 23.323 18.2265 23.323 16.5695V12.5695"
+                        stroke="#777786" stroke-width="2" stroke-miterlimit="10" />
+                    <path
+                        d="M11.323 16.5695V20.5695C11.323 22.2265 14.009 23.5695 17.323 23.5695C20.637 23.5695 23.323 22.2265 23.323 20.5695V16.5695"
+                        stroke="#777786" stroke-width="2" stroke-miterlimit="10" />
+                    <path
+                        d="M17.323 15.5695C20.637 15.5695 23.323 14.2265 23.323 12.5695C23.323 10.9125 20.637 9.56946 17.323 9.56946C14.009 9.56946 11.323 10.9125 11.323 12.5695C11.323 14.2265 14.009 15.5695 17.323 15.5695Z"
+                        stroke="#777786" stroke-width="2" stroke-miterlimit="10" stroke-linecap="square" />
+                </svg>
+
+                <span>Staking</span>
+            </li>
+            <li class="d-flex align-center justify-center">
+                <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M21.3931 0.569458H5.39307C3.73907 0.569458 2.39307 1.91546 2.39307 3.56946V21.0695C2.39307 22.9995 3.96307 24.5695 5.89307 24.5695H21.3931C21.6583 24.5695 21.9126 24.4641 22.1002 24.2766C22.2877 24.089 22.3931 23.8347 22.3931 23.5695V1.56946C22.3931 1.30424 22.2877 1.04989 22.1002 0.862351C21.9126 0.674815 21.6583 0.569458 21.3931 0.569458ZM11.3931 2.56946H17.3931V11.5695L14.3931 9.56946L11.3931 11.5695V2.56946ZM20.3931 22.5695H5.89307C5.06607 22.5695 4.39307 21.8965 4.39307 21.0695C4.39307 20.2425 5.06607 19.5695 5.89307 19.5695H20.3931V22.5695Z"
+                        fill="#777786" />
+                </svg>
+
+                <span>Insight</span>
+            </li>
+            <li class="d-flex align-center justify-center">
+                <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6.34302 0.569458H0.343018V6.56946H6.34302V0.569458Z" fill="#777786" />
+                    <path d="M15.343 0.569458H9.34302V6.56946H15.343V0.569458Z" fill="#777786" />
+                    <path d="M24.343 0.569458H18.343V6.56946H24.343V0.569458Z" fill="#777786" />
+                    <path d="M6.34302 9.56946H0.343018V15.5695H6.34302V9.56946Z" fill="#777786" />
+                    <path d="M15.343 9.56946H9.34302V15.5695H15.343V9.56946Z" fill="#777786" />
+                    <path d="M24.343 9.56946H18.343V15.5695H24.343V9.56946Z" fill="#777786" />
+                    <path d="M6.34302 18.5695H0.343018V24.5695H6.34302V18.5695Z" fill="#777786" />
+                    <path d="M15.343 18.5695H9.34302V24.5695H15.343V18.5695Z" fill="#777786" />
+                    <path d="M24.343 18.5695H18.343V24.5695H24.343V18.5695Z" fill="#777786" />
+                </svg>
+
+            </li>
+        </ul>
+    </section>
+    <!-- Sidebar series end -->
     <!-- wrapper start -->
     <div class="wrapper">
         <!-- header start -->
@@ -148,7 +250,7 @@
                             </div>
                             <div class="rank-card d-flex align-center justify-center">
                                 <div class="rank-card-img">
-                                    <img src="./img/rank-card-2.png" alt="">
+                                    <img src="./img/rank-card-3.png" alt="">
                                 </div>
                                 <div class="rank-card-about d-flex align-center justify-center">
                                     <h4>Elite</h4>
@@ -163,7 +265,7 @@
                             </div>
                             <div class="rank-card d-flex align-center justify-center">
                                 <div class="rank-card-img">
-                                    <img src="./img/rank-card-2.png" alt="">
+                                    <img src="./img/rank-card-4.png" alt="">
                                 </div>
                                 <div class="rank-card-about d-flex align-center justify-center">
                                     <h4>Pro</h4>
@@ -178,7 +280,7 @@
                             </div>
                             <div class="rank-card d-flex align-center justify-center">
                                 <div class="rank-card-img">
-                                    <img src="./img/rank-card-2.png" alt="">
+                                    <img src="./img/rank-card-5.png" alt="">
                                 </div>
                                 <div class="rank-card-about d-flex align-center justify-center">
                                     <h4>Elite</h4>
