Media 1000px gacha

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                         </div>
                     </div>
                     <div class="connect-footer d-flex align-center justify-between">
-                        <div class="checkbox d-flex align-center">
+                        <div class="checkbox">
                             <input id="connect" type="checkbox">
                             <label for="connect">I fully understand and agree with the <a href="#">Ranking System</a>
                                 and <a href="#">New Staking and Unstaking Policy</a></label>
